# fx2025zerox

./: .replit  pyproject.toml  replit.md  tailwind.config.ts
client/src/: App.tsx  index.css
client/src/components/: scan-card.tsx  sidebar.tsx  terminal-output.tsx  tool-status-grid.tsx  vulnerability-summary.tsx
client/src/hooks/: use-websocket.ts
client/src/lib/: websocket.ts
client/src/pages/: dashboard.tsx  new-scan.tsx  reports.tsx  scan-history.tsx  settings.tsx
server/: routes.ts  storage.ts
server/services/: scanService.ts  toolService.ts
server/utils/: toolRunner.ts
shared/: schema.ts
tools/: advanced_web_scanner.py  ai_vulnerability_analyzer.py  directory_scan.py  network_scan.py  osint_gather.py  parameter_fuzzer.py  port_scanner.py  requirements.txt  sql_injection.py  subdomain_enum.py  web_vulnerability_scanner.py  xss_scanner.py
