[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "cryptography>=45.0.7",
    "dnspython>=2.7.0",
    "pyopenssl>=25.1.0",
    "python-whois>=0.9.5",
    "requests>=2.32.5",
]
