[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "colorlog>=6.9.0",
    "cryptography>=45.0.7",
    "dnspython>=2.7.0",
    "lxml>=6.0.1",
    "pyopenssl>=25.1.0",
    "python-nmap>=0.7.1",
    "python-whois>=0.9.5",
    "pyyaml>=6.0.2",
    "requests>=2.32.5",
    "selenium>=4.35.0",
]
